--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,21 +29,21 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  another_flushbar: ^1.12.29
+  carousel_slider: ^4.1.1
   cupertino_icons: ^1.0.2
+  device_preview: ^1.1.0
+  dio: ^4.0.6
   equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.2.9
+  flutter_staggered_grid_view: ^0.6.2
   flutter_svg: ^1.1.5
+  shared_preferences: ^2.0.15
   sizer: ^2.0.15
-  carousel_slider: ^4.1.1
 
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
