--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,19 +29,20 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter:
+    sdk: flutter
   another_flushbar: ^1.12.29
   carousel_slider: ^4.1.1
   cupertino_icons: ^1.0.2
   device_preview: ^1.1.0
   dio: ^4.0.6
   equatable: ^2.0.5
-  flutter:
-    sdk: flutter
   flutter_native_splash: ^2.2.9
   flutter_staggered_grid_view: ^0.6.2
   flutter_svg: ^1.1.5
   shared_preferences: ^2.0.15
   sizer: ^2.0.15
+  steps_indicator: ^1.3.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
